# AXIOM

./: .gitignore  .issue4-applied  .issue6-applied  AGENTS.md  AGGREGATE_SEMANTICS.md  AI_FIRST_MVP_CONTRACT.md  ARITHMETIC_SEMANTICS.md  AUTOMATED_REVIEW_CONTRACT.md  AXIOM_BENCH_PREREGISTRATION.md  AXIOM_BENCH_RUNNER_CONTRACT.md  AXIOM_BENCH_SPEC.md  CONTEXT7_MVP_DESIGN_EVIDENCE.md  CONTEXT7_SOURCE_EVIDENCE.md  CORE_SEMANTICS.md  Cargo.toml  M0_CONTRACT_SOURCE_EVIDENCE.md  M0_IMPLEMENTATION_NOTES.md  M1_BENCHMARK_SOURCE_EVIDENCE.md  M1_RUNNER_SOURCE_EVIDENCE.md  MUTATION_SEMANTICS.md  MVP_ROADMAP.md  PROOF_STATUS.md  README.md  REFERENCE_SEMANTICS.md  REV2_REVIEW_GATE_SOURCE_EVIDENCE.md  REV3_REVIEW_PUBLISHER_SOURCE_EVIDENCE.md  ROADMAP_AMENDMENT_001.md  ROADMAP_AMENDMENT_002.md  ROADMAP_AMENDMENT_003.md  ROADMAP_AMENDMENT_004.md  ROADMAP_AMENDMENT_005.md  ROADMAP_AMENDMENT_006.md  ROADMAP_AMENDMENT_007.md  SUBAGENT_STATUS.md  V1_TRACKING.md  requirements-proof.txt  run_repo_proof.py
.github/: pull_request_template.md
agents/: AGENT_A_IMPLEMENTATION.md  AGENT_B_CHARTER.md  __init__.py  agent_b_aggregate_generated_checks.py  agent_b_aggregate_layout_checks.py  agent_b_aggregate_semantic_checks.py  agent_b_arithmetic_checks.py  agent_b_benchmark_contract_checks.py  agent_b_benchmark_runner_checks.py  agent_b_contract_checks.py  agent_b_core_checks.py  agent_b_freshness_checks.py  agent_b_lvalue_checks.py  agent_b_reference_checks.py  agent_b_review.py  agent_b_review_gate_checks.py  agent_b_review_publisher_checks.py  agent_b_support.py  (+1 more)
axiom_bench/: __init__.py  (+7 more)
(+269 files in other folders)
